Bump io.netty:netty-codec from 4.1.119.Final to 4.2.0.Final (#406)
* Bump io.netty:netty-codec from 4.1.119.Final to 4.2.0.Final
* Add RadiusLifecycle interface to expose Future for RadiusServer/RadiusClient isReady() and close()
* remove deprecated method usage
* use netty-codec-base